--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vanilla-mongodb-crud",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "joi": "^14.3.0",
     "mongodb": "^3.6.4",
     "path": "^0.12.7"
-  }
+  },
+  "description": ""
 }
